resolved distorted html grid across the pages; also resolve the responsivenes across different devices; also added modal form for JOIN US button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,8 @@ header nav.bg-blue{
 #main-logo {
         float:left;
         font-family: 'Merriweather', serif;
-        font-size:280%;
-        margin-left:50px;
+        font-size: 1.3em;
+        margin-left: 0px;
         margin-bottom: 0;
         padding-bottom: 0;
         border-bottom: 0;
@@ -46,6 +46,12 @@ header nav.bg-blue{
         text-decoration: none;
         line-height: 75px;
         height: 75px;
+
+}
+nav small{
+    color: #ffffff;
+    float: left;
+    display: inline-block;
 }
 
 header div #watchword {
@@ -86,7 +92,7 @@ div .caption a .joinus {
 /*-------------------------------------------COLOR----------------------------------COLOR-----------COLOR------------------------------------------------*/
 
 nav .my-nav #nav {
-    background-color: #6f2c3f;
+    background-color:#5a172a;
 }
 
 .navitems a {
@@ -124,7 +130,7 @@ h2, h3, h4, h5 {
 .bg-dark {
     padding: 0px;
     border: 0;
-    background-color:#922724!important;
+    background-color:#5a172a!important;
 }
 
 nav div ul.my-nav {
@@ -285,21 +291,17 @@ nav div ul.my-nav {
 /*--------------------------------------------IFRAME--FOOD-CLIMATE-----------------------------IFRAME--FOOD-CLIMATE-ARTICLE-----------------------E-----------------*/
 .iframe-container {
     
-     width: 100%;
-    height: 100%;
     margin-bottom: 50px;
     margin-top: 75px; 
     position: relative; 
  }
-.d-iframe {
-    width: 100%;
+.my-new-class {
+    width: 100%; 
     height: 100%;
 }
 
  div .iframe-container .d-iframe iframe {
     position: absolute;
-    width: 100%;
-    height: 100%;
     border-radius: 10%;  
  }
 
@@ -311,7 +313,6 @@ nav div ul.my-nav {
     background-color: #003d52;
     margin-top: 75px 0;
     position: relative;
-    align-items: center;
 }
 
 .sdg-mandate h3 {
@@ -326,8 +327,8 @@ nav div ul.my-nav {
     font-weight: 700;
 }
 
-div .sdg-mandate-cover .card {
-    width: 20%;
+.sdg-mandate-cover .card {
+    width: 90%;
     margin: 10%;
     float: left;
     overflow: hidden;
@@ -345,9 +346,13 @@ div .sdg-mandate-cover .card a img {
     height: 180px;
 }
 
-/*-------------------------------------------ABOUT-TEXT-AND-IMAGE----------------------------------------------------ABOUT-TEXT-AND-IMAGE------*/
+/*-------------------------------------------ABOUT-TEXT-AND-IMAGE---------------------------------------------------
 .sectional-container {
     height: 600px;
+}
+-ABOUT-TEXT-AND-IMAGE------*/
+.sectional-container{
+    margin-top: 50px;
 }
 
 div #about-container {
@@ -409,7 +414,7 @@ div #visionimag {
  }
 
  .sectional-container{
-    height: 600px;
+ 
 }
 .vision-containe, .strategy-container {
     margin: 0;
@@ -562,7 +567,7 @@ div #visionimag {
 /*-------------------------------------------FOOTER-SECTION----------------------------------------------------FOOTER-SECTION----------------------*/
 
 footer {
-    background-color: #6f2c3f;
+    background-color:#5a172a;
     color: #777777;
     min-height: 120px;
     margin: 0;
@@ -597,6 +602,10 @@ div h5 ul.social-media li a i {
     -o-transition: all 0.35s ease-in-out;
 }
 
+.social-media{
+    text-align:center;
+
+}
 
 .social-media li a i:hover {
     background: #e84610;
